# old-spatial-sdk-rs

./: .gitignore  Cargo.toml
schema/player/: animation.schema
spatial_codegen/: Cargo.toml
spatial_codegen/examples/: main.rs
spatial_codegen/src/: ast.rs  lib.rs
spatial_codegen/src/ast/: ast.rs  ast_node.rs  component.rs  data_type.rs  enum.rs  member.rs  mod.rs  package_node.rs  schema_file.rs  type.rs  value.rs
spatial_codegen/src/ast/std/: mod.rs
spatial_codegen/src/composer/: mod.rs
spatial_codegen/src/parser/: command.rs  component.rs  data_type.rs  mod.rs  package_name.rs  schema_file.rs  spatial_type.rs  types.rs  utils.rs
spatial_codegen/src/std_library_ast/: mod.rs
spatial_macro/: Cargo.toml
spatial_macro/examples/: component_macro.rs
spatial_macro/src/: lib.rs
test/: Cargo.toml  build.rs
test/src/: main.rs
