[package]
name = "spatial_macro"
version = "0.1.0"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[[example]]
name = "component_macro"

[dependencies]
nom = "5.1.2"
