[package]
name = "test_spatial_sdk"
version = "0.1.0"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spatial_macro = { path = "../spatial_macro" }

[build-dependencies]
spatial_codegen = { path = "../spatial_codegen" }